added scripts, for yandex map, added ui-library

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=534aa0d8-ad70-4bd8-b470-7b4dec75fbe4&lang=ru_RU" type="text/javascript">
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=534aa0d8-ad70-4bd8-b470-7b4dec75fbe4&lang=ru_RU" type="text/javascript"></script>
     </script>
   </body>
 </html>
